--- a/pom.xml
+++ b/pom.xml
@@ -7,9 +7,15 @@
 	<artifactId>job4j_dreamjob</artifactId>
 	<version>1.0</version>
 	<packaging>war</packaging>
-
 	<name>job4j_dreamjob</name>
-
+	<dependencies>
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>javax.servlet-api</artifactId>
+			<version>4.0.1</version>
+			<scope>provided</scope>
+		</dependency>
+	</dependencies>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<maven.compiler.source>14</maven.compiler.source>
