--- a/pom.xml
+++ b/pom.xml
@@ -2,12 +2,35 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-
 	<groupId>ru.job4j</groupId>
 	<artifactId>job4j_dreamjob</artifactId>
 	<version>1.0</version>
 	<packaging>war</packaging>
 	<name>job4j_dreamjob</name>
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.liquibase</groupId>
+				<artifactId>liquibase-maven-plugin</artifactId>
+				<version>3.6.2</version>
+				<configuration>
+					<changeLogFile>${basedir}/db/master.xml</changeLogFile>
+					<url>jdbc:postgresql://127.0.0.1:5432/dreamjob</url>
+					<driver>org.postgresql.Driver</driver>
+					<username>postgres</username>
+					<password>password</password>
+				</configuration>
+				<executions>
+					<execution>
+						<phase>process-resources</phase>
+						<goals>
+							<goal>clearCheckSums</goal> <!--update-->
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
+	</build>
 	<dependencies>
 		<dependency>
 			<groupId>javax.servlet</groupId>
@@ -19,6 +42,16 @@
 			<groupId>javax.servlet</groupId>
 			<artifactId>jstl</artifactId>
 			<version>1.2</version>
+		</dependency>
+		<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<version>42.2.9</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-dbcp2</artifactId>
+			<version>2.7.0</version>
 		</dependency>
 	</dependencies>
 	<properties>
