--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -3,6 +3,15 @@
  "http://java.sun.com/dtd/web-app_2_3.dtd" >
 <web-app>
   <display-name>Archetype Created Web Application</display-name>
+  <filter>
+    <filter-name>AuthFilter</filter-name>
+    <filter-class>ru.job4j.dream.filter.AuthFilter</filter-class>
+  </filter>
+  <filter-mapping>
+    <filter-name>AuthFilter</filter-name>
+    <url-pattern>*.do</url-pattern>
+  </filter-mapping>
+
   <servlet>
     <servlet-name>PostServlet</servlet-name>
     <servlet-class>ru.job4j.dream.servlet.PostServlet</servlet-class>
@@ -31,7 +40,6 @@
     <servlet-name>UserServlet</servlet-name>
     <servlet-class>ru.job4j.dream.servlet.UserServlet</servlet-class>
   </servlet>
-
   <servlet-mapping>
     <servlet-name>PostServlet</servlet-name>
     <url-pattern>/post/posts.do</url-pattern>
