--- a/.travis.yml
+++ b/.travis.yml
@@ -6,10 +6,9 @@ language: java
 jdk:
   - openjdk13
 services:
-  #- postgresql
+  - postgresql
 before_install:
-  #- psql -c 'create database tracker;' -U postgres
-  #- psql -c 'create database parser;' -U postgres
+  - psql -c 'create database dreamjob;' -U postgres
 # используем режим обычного пользователя для сборки проекта.
 sudo: false
 # после выполнения сборки запустить скрипт, который будет собирать статистику по JaCoCo
