--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ sudo: false
 # после выполнения сборки запустить скрипт, который будет собирать статистику по JaCoCo
 # Здесь используется сторонний сервис https://codecov.io/
 after_success:
-  - bash <(curl -s https://codecov.io/bash)
+  - bash <(curl -s https://codecov.io/bash) -t 2b8be1aa-4be3-453e-bd78-52e2766c15e8
 # Отправлять уведомление на почту mailto:youremail@smtp.ru(Изменить на свою) если сборка упала
 notifications:
   email:
