Middle. Блок 2. Servlet JSP. 8. JS, JQuery, Ajax. 5. Реализация интерфейса [#282967]

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -48,6 +48,10 @@
     <servlet-name>JsonController</servlet-name>
     <servlet-class>ru.job4j.dream.servlet.JsonController</servlet-class>
   </servlet>
+  <servlet>
+    <servlet-name>CityServlet</servlet-name>
+    <servlet-class>ru.job4j.dream.servlet.CityServlet</servlet-class>
+  </servlet>
 
   <servlet-mapping>
     <servlet-name>PostServlet</servlet-name>
@@ -84,5 +88,9 @@
   <servlet-mapping>
     <servlet-name>JsonController</servlet-name>
     <url-pattern>/json</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>CityServlet</servlet-name>
+    <url-pattern>/city</url-pattern>
   </servlet-mapping>
 </web-app>
